--- a/recipes/spaghettiaglioolio.html
+++ b/recipes/spaghettiaglioolio.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Spaghetti Aglio e Olio</h1>
+        <img src="https://www.allrecipes.com/thmb/C6X4A92-CvGVJizfjkoUKumF_-g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8962968_original-Tammy-2000-ce9b060431df4d3cb3b73b760b970bcc.jpg" alt="finished dish of spaghetti with garlic and oil">
     </body>
 
 </html>
