--- a/recipes/spaghettiaglioolio.html
+++ b/recipes/spaghettiaglioolio.html
@@ -9,6 +9,12 @@
     <body>
         <h1>Spaghetti Aglio e Olio</h1>
         <img src="https://www.allrecipes.com/thmb/C6X4A92-CvGVJizfjkoUKumF_-g=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8962968_original-Tammy-2000-ce9b060431df4d3cb3b73b760b970bcc.jpg" alt="finished dish of spaghetti with garlic and oil">
+
+        <h2>Description</h2>
+        <p>No two <em>aglio e olio</em> recipes are alike, but this one is pretty true to the classic method.</p>
+        <p>This is a traditional recipies from Naples.</p>
+        <p>The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil.</p>
+        <p>If it's too light, you don't get the full flavor and if it's too dark it gets bitter.</p>
     </body>
 
 </html>
