Add unordered list

--- a/recipes/spaghettiaglioolio.html
+++ b/recipes/spaghettiaglioolio.html
@@ -15,6 +15,15 @@
         <p>This is a traditional recipies from Naples.</p>
         <p>The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil.</p>
         <p>If it's too light, you don't get the full flavor and if it's too dark it gets bitter.</p>
+
+        <h2>Ingredients</h2>
+        <p>You likely already have most of the ingredients you’ll need for this recipe on hand. Here’s what you’ll need:</p>
+        <ul>
+            <li><strong>Spaghetti</strong>: This recipe, which makes about four servings, starts with one pound of uncooked spaghetti.</li>
+            <li><strong>Oil</strong>: You’ll need half a cup of olive oil.</li>
+            <li><strong>Garlic</strong>: Six cloves of thinly sliced garlic lends bold flavor.</li>
+            <li><strong>Seasonings</strong>: This recipe is flavored with crushed red pepper flakes, black pepper, and fresh parsley. </li>
+        </ul>
     </body>
 
 </html>
