Add ordered list

--- a/recipes/spaghettiaglioolio.html
+++ b/recipes/spaghettiaglioolio.html
@@ -24,6 +24,14 @@
             <li><strong>Garlic</strong>: Six cloves of thinly sliced garlic lends bold flavor.</li>
             <li><strong>Seasonings</strong>: This recipe is flavored with crushed red pepper flakes, black pepper, and fresh parsley. </li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil the spaghetti.</li>
+            <li>Toast the garlic in olive oil.</li>
+            <li>Stir the seasonings into the pasta, then stir in the garlic and oil.</li>
+        </ol>
+        
     </body>
 
 </html>
