--- a/recipes/caciopepe.html
+++ b/recipes/caciopepe.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+        <h1>Spaghetti Cacio e Pepe</h1>
+        <img src="https://www.allrecipes.com/thmb/FYxSLMRT1xFuNuAMQQQcIXT1OOM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3478412-b7369926f0be49e3a71808c446c18f1d.jpg" alt="a dish of spaghetti with pecorino cheese and black pepper">
+
         
     </body>
 </html>
