--- a/recipes/caciopepe.html
+++ b/recipes/caciopepe.html
@@ -22,5 +22,15 @@
             <li><strong>Black Pepper</strong>: 2 teaspoons of ground black pepper</li>
             <li><strong>Cheese</strong>: 1 ¾ cups of grated <em>Pecorino Romano cheese</em></li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li><p>Bring a large pot of lightly salted water to a boil.</p>
+                <p>Cook spaghetti in boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes.</p>
+                <p>Reserve 1 cup cooking water, then drain spaghetti.</p></li>
+            <li><p>Heat olive oil in a large skillet over medium heat. Cook and stir garlic and pepper in hot oil until fragrant, 1 to 2 minutes.</p>
+                <p>Add cooked spaghetti and Pecorino Romano cheese. Ladle in 1/2 cup reserved cooking water; stir until cheese is melted, about 1 minute.</p>
+                <p>Stir in more cooking water as needed, 1 tablespoon at a time, until sauce coats spaghetti, about 1 minute more.</p></li>
+        </ol>
     </body>
 </html>
