--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Spaghetti alla Carbonara</h1>
+        <img src="https://www.allrecipes.com/thmb/InzCzO3OWS1inqCRU3AJhv33fhg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/245775-spaghetti-alla-carbonara-the-traditional-italian-recipe-DDMFS-4x3-879c32ee3cfb463582e3e6230e311029.jpg" alt="delicious plate of spaghetti alla carbonara">
     </body>
 </html>
