--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -9,5 +9,11 @@
     <body>
         <h1>Spaghetti alla Carbonara</h1>
         <img src="https://www.allrecipes.com/thmb/InzCzO3OWS1inqCRU3AJhv33fhg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/245775-spaghetti-alla-carbonara-the-traditional-italian-recipe-DDMFS-4x3-879c32ee3cfb463582e3e6230e311029.jpg" alt="delicious plate of spaghetti alla carbonara">
+
+        <h2>Description</h2>
+        <p><em>Carbonara</em> is a Roman dish made with eggs, hard cheese, and cured pork.</p>
+        <p>Its signature rich and silky sauce comes from beaten eggs tossed with hot pasta.</p>
+        <p>The trick to making carbonara is making sure the pasta is hot enough to cook the eggs, but not so hot that they curdle.</p>
+
     </body>
 </html>
