Add ingredients section with unordered list

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -15,5 +15,14 @@
         <p>Its signature rich and silky sauce comes from beaten eggs tossed with hot pasta.</p>
         <p>The trick to making carbonara is making sure the pasta is hot enough to cook the eggs, but not so hot that they curdle.</p>
 
+        <h2>Ingredients</h2>
+        <ul>
+            <li><strong>Spaghetti</strong>: 1 pound of spaghetti noodles. If you like, you can substitute <em>bucatini</em> for the spaghetti.</li>
+            <li><strong>Oil</strong>: 2 teaspoons of olive oil.</li>
+            <li><strong>Eggs</strong>: 3 large eggs.</li>
+            <li><strong>Pork</strong>: use 1 pound of <em>Guanciale</em> (cured pork cheek), diced. If you can’t find it, you can substitute unsmoked bacon or <em>pancetta</em>.</li>
+            <li><strong>Cheese</strong>: Opt for 10 tablespoons of hand-shredded <em>Pecorino Romano</em> cheese. You can substitute <em>Parmesan</em>, if preferred.</li>
+            <li><strong>Seasonings</strong>: This flavorful spaghetti alla carbonara is simply seasoned with salt and pepper to taste.</li>
+        </ul>
     </body>
 </html>
