Add steps section with ordered list

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -24,5 +24,17 @@
             <li><strong>Cheese</strong>: Opt for 10 tablespoons of hand-shredded <em>Pecorino Romano</em> cheese. You can substitute <em>Parmesan</em>, if preferred.</li>
             <li><strong>Seasonings</strong>: This flavorful spaghetti alla carbonara is simply seasoned with salt and pepper to taste.</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li><p>Heat olive oil in a large skillet over medium heat; add guanciale</p>
+                <p>Cook, turning occasionally, until evenly browned and crispy, 5 to 10 minutes. Remove from heat and drain on paper towels.</p></li>
+            <li><p>Bring a large pot of salted water to a boil.</p>
+                <p>Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 9 minutes. Drain and return to the pot.</p>
+                <p>Let cool, stirring occasionally, about 5 minutes.</p></li>
+            <li>Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and creamy.</li>
+            <li>Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale.</li>
+            <li>Top with remaining Pecorino Romano cheese and more black pepper.</li>
+        </ol>
     </body>
 </html>
