Fix structure of ordered list

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -32,9 +32,9 @@
             <li><p>Bring a large pot of salted water to a boil.</p>
                 <p>Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 9 minutes. Drain and return to the pot.</p>
                 <p>Let cool, stirring occasionally, about 5 minutes.</p></li>
-            <li>Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and creamy.</li>
-            <li>Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale.</li>
-            <li>Top with remaining Pecorino Romano cheese and more black pepper.</li>
+            <li><p>Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and creamy.</p></li>
+            <li><p>Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale.</p></li>
+            <li><p>Top with remaining Pecorino Romano cheese and more black pepper.</p></li>
         </ol>
     </body>
 </html>
