--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/spaghettiaglioolio.html">Spaghetti Aglio e Olio</a></li>
             <li><a href="./recipes/caciopepe.html">Spaghetti Cacio e Pepe</a></li>
+            <li><a href="./recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
         </ul>
     </body>
 </html>
