--- a/recipes/spaghettiaglioolio.html
+++ b/recipes/spaghettiaglioolio.html
@@ -12,7 +12,7 @@
 
         <h2>Description</h2>
         <p>No two <em>aglio e olio</em> recipes are alike, but this one is pretty true to the classic method.</p>
-        <p>This is a traditional recipies from Naples.</p>
+        <p>This is a traditional recipe from Naples.</p>
         <p>The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil.</p>
         <p>If it's too light, you don't get the full flavor and if it's too dark it gets bitter.</p>
 
